--- a/index.html
+++ b/index.html
@@ -5,25 +5,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="stylesheet" href="./css/style.css">
   <title>Frontend Mentor | Stats preview card component</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution { color: white; font-size: 11px; text-align: center; }
+    .attribution a { color: white }
   </style>
 </head>
 <body>
 
-  Get insights that help your business grow.
-
-  Discover the benefits of data analytics and make better decisions regarding revenue, customer 
-  experience, and overall efficiency.
-
-  10k+ companies
-  314 templates
-  12m+ queries
+  <main>
+    <section class="main__section">
+      <div class="card">
+        <div class="card__image">
+          <div class="cover-img"></div>
+          <figure>
+            <img src="./images/image-header-mobile.jpg" alt="womans working in office">
+            <figcaption></figcaption>
+          </figure>
+        </div>
+        <div class="card__text">
+          <h1>Get insights that help your business grow.</h1>
+          <p>
+            Discover the benefits of data analytics and make better decisions regarding revenue, customer 
+            experience, and overall efficiency.
+          </p>
+          <ul>
+            <li><h2>10k+ companies</h2></li>
+            <li><h2>314 templates</h2></li>
+            <li><h2>12m+ queries</h2></li>
+          </ul>
+        </div>
+      </div>
+    </section>
+  </main>
 
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
