desenvolvimento semi-finalizado

--- a/index.html
+++ b/index.html
@@ -27,15 +27,15 @@
           </figure>
         </div>
         <div class="card__text">
-          <h1>Get insights that help your business grow.</h1>
+          <h1>Get <span class="card__text__accent">insights</span> that help your business grow.</h1>
           <p>
             Discover the benefits of data analytics and make better decisions regarding revenue, customer 
             experience, and overall efficiency.
           </p>
           <ul>
-            <li><h2>10k+ companies</h2></li>
-            <li><h2>314 templates</h2></li>
-            <li><h2>12m+ queries</h2></li>
+            <li><h2>10k+</h2><h3>companies</h3></li>
+            <li><h2>314</h2><h3>templates</h3></li>
+            <li><h2>12m+</h2><h3>queries</h3></li>
           </ul>
         </div>
       </div>
