--- a/index.html
+++ b/index.html
@@ -41,10 +41,11 @@
       </div>
     </section>
   </main>
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/newlomar" target="_blank">Newton Lomar</a>.
-  </div>
+  <footer>
+    <section class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/newlomar" target="_blank">Newton Lomar</a>.
+    </section>
+  </footer>
 </body>
 </html>
