--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <div class="cover-img"></div>
           <figure>
             <img src="./images/image-header-mobile.jpg" alt="womans working in office">
-            <figcaption></figcaption>
+            <figcaption class="hidden">womans working in office</figcaption>
           </figure>
         </div>
         <div class="card__text">
