--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
             experience, and overall efficiency.
           </p>
           <ul>
-            <li><h2>10k+</h2><h3>companies</h3></li>
-            <li><h2>314</h2><h3>templates</h3></li>
-            <li><h2>12m+</h2><h3>queries</h3></li>
+            <li><strong>10k+</strong><span>companies</span></li>
+            <li><strong>314</strong><span>templates</span></li>
+            <li><strong>12m+</strong><span>queries</span></li>
           </ul>
         </div>
       </div>
